<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/layoutParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textViewSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_medium"
                tools:text="2014年秋アニメ" />

            <TextView
                android:id="@+id/textViewEpisodeCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSeason"
                android:layout_marginBottom="2dp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_medium"
                tools:text="エピソード数:11" />

            <TextView
                android:id="@+id/textViewHashTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEpisodeCount"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_medium"
                tools:text="Twitterハッシュタグ:#はいふり" />

            <TextView
                android:id="@+id/textViewWatchersCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewHashTag"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_medium"
                tools:text="この作品を100人が見ています" />

            <Button
                android:id="@+id/buttonSite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewWatchersCount"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="8dp"
                android:text="@string/work_site"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonWikipedia"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewWatchersCount"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/buttonSite"
                android:text="@string/work_wikipedia"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonTwitter"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewWatchersCount"
                android:layout_toRightOf="@id/buttonWikipedia"
                android:text="@string/work_twitter"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/layoutEpisodeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonSite"
                android:orientation="vertical" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>